some file names changed and book htmlpage finished

--- a/book.html
+++ b/book.html
@@ -53,7 +53,7 @@
 
         <div class="row book__img-wrapper ">
           <div class="book__img ">
-            <img src="./img/Author-img/book-img (1).png" alt="Qo'rqma">
+            <img src="./assets/images/details/book-img.png" alt="Qo'rqma">
           </div>
         </div>
 
@@ -92,16 +92,17 @@
               <span>Nihol nashr</span>
             </div>
 
-            <div class="row">
+            <div class="row alone__text">
               <p>To'liq ma'lumot</p>
               <i class="fa-solid fa-arrow-down"></i>
             </div>
           </div>
-          <div class="row">
+          <div class="row book__description-wrapper">
             <p>Роман ўтган асрнинг йигирманчи йилларида Германияда таҳсил олган ва собиқ Совет Иттифоқи томонидан
               шафқатсизларча қатл этилган миллат йигит-қизларининг хотирасига бағишланади.
 
-              <br> Роман воқеаларини қисқача сўзлар билан ифода этиб бўлмайди. Барчаси шу қадар тиғизки, шошириб қўяди.
+              <br>
+              Роман воқеаларини қисқача сўзлар билан ифода этиб бўлмайди. Барчаси шу қадар тиғизки, шошириб қўяди.
               Мажоз, образ, ифода, ўт, ҳеч кимникига ўхшамаган лиризмни ҳис қиласиз. Миллият, соф муҳаббат, кўринмас ва
               ошкор фожиалар, тарих, бугун ва эртанинг бир-бирига кавшарланган ҳалқаси, ростлик даъвосидаги ёлғонлар,
               руҳ ва қондаги парадокслар сизни ўтмиш ва келажак куйига асир қилади, ўйлатади, йиғлатади ва аччиқ-аччиқ
@@ -110,32 +111,32 @@
             </p>
           </div>
 
-          <div class="row">
+          <div class="row about__format-text">
             <h3>Mavjud formatlar</h3>
           </div>
 
-          <div class="row">
+          <div class="row about__format-wrapper">
 
-            <div class="col">
+            <div class="col-2 format__icon-wrapper">
               <i class="fa-regular fa-bookmark"></i>
               <span>Qog'oz kitob</span>
               <p>27 000 so'm</p>
             </div>
 
-            <div class="col">
+            <div class="col-2 format__icon-wrapper">
               <i class="fa-solid fa-headphones-simple"></i>
               <span>Audiokitob</span>
               <p>6:23 soat</p>
             </div>
 
-            <div class="col">
+            <div class="col-2 format__icon-wrapper">
               <i class="fa-solid fa-star"></i>
               <span>Elektron</span>
               <p>pdf, epub</p>
 
             </div>
 
-            <div class="col">
+            <div class="col-5 format__btn-wrapper">
               <button>Javonga qo'shish </button>
             </div>
           </div>
@@ -160,34 +161,31 @@
       <div class="tab__content">
 
         <div data-content id="bir">
-          <div>Birinchi section</div>
+
         </div>
 
         <div data-content id="ikki" class="active">
           <div class="row">
 
-            <div class="col-6 comment__card-wrapper">
+            <div class="col-5 comment__card-wrapperfirst">
               <p class="comment__text">Inson bolasi ne kunlarni ko'rmaydi?!
                 Har bir odam o'z g'ami bilan bo'lsa, hayotdan ko'z yumib ketganlarga umr bo'yi motam tutib o'tsa, bu
                 moddiy olam shu kunlarga yetolarmidi?
                 Hayot to'lqini ojizlarni qirg'oqqa irg'itib tashlaydi. Oqimga qarshi suza olganlar, to'lqinni
                 egarlaganlargina ertangi kunga yetib keladi.</p>
             </div>
-            <div class="col-6 comment__card-wrapper">
-              <p class="comment__text">Inson bolasi ne kunlarni ko'rmaydi?!
-                Har bir odam o'z g'ami bilan bo'lsa, hayotdan ko'z yumib ketganlarga umr bo'yi motam tutib o'tsa, bu
-                moddiy olam shu kunlarga yetolarmidi?
-                Hayot to'lqini ojizlarni qirg'oqqa irg'itib tashlaydi. Oqimga qarshi suza olganlar, to'lqinni
-                egarlaganlargina ertangi kunga yetib keladi.</p>
+            <div class="col-5 comment__card-wrappersecond">
+              <p class="comment__text">Yer kurrasida chumolidek mehnat qilayotganlardan ko'ra, tuproq tagida yotganlar
+                ko'p. Yer qatlami odam suyaklariga to'lib ketgan.</p>
             </div>
 
 
           </div>
-          <div>Ikkinchi section</div>
+
         </div>
 
         <div data-content id="uch">
-          <div>Uchunchi section</div>
+
         </div>
 
       </div>
@@ -205,8 +203,22 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row book__card-wrapper">
       <!-- =================      for card     ==================== -->
+
+      <div class="card">
+        <a href="book.html">
+          <img src="./assets/images/book.png" alt="Avatar" />
+        </a>
+        <div class="card-body pt-2">
+          <a href="books.html" class="card-title">dunyoning ishlari</a>
+          <div class="card-text pt-1">O'tkir Hoshimov</div>
+        </div>
+        <div class="card-footer pt-1">
+          <i class="fa-solid fa-star"></i>
+          4.1 - 3400 ta fikrlar
+        </div>
+      </div>
     </div>
 
 
