--- a/auth.html
+++ b/auth.html
@@ -10,11 +10,12 @@
     <meta property="og:type" content="" />
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
-
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
     <!-- Place favicon.ico in the root directory -->
     <link rel="stylesheet" href="sass/main.scss" />
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -27,7 +28,7 @@
       <div class="flip-card-3D-wrapper">
         <div id="flip-card">
           <div class="flip-card-front row">
-            <!-- <img  class="col-sm-5" src="./assets/images/auth/Sign In (1).png" alt=""> -->
+            <img class="col-sm-5" src="./img/profile/signin.png" alt="" />
             <div class="form-up col-sm-7">
               <form class="form-sign-in" action="">
                 <h1 class="form-title pb-2">Sign In</h1>
@@ -55,7 +56,7 @@
             </div>
           </div>
           <div class="flip-card-back row">
-            <!-- <img  class="col-sm-5" src="./assets/images/auth/Sign Up (1).png" alt=""> -->
+            <img class="col-sm-5" src="./img/profile/signup.png" alt="" />
             <div class="form-up col-sm-7">
               <form class="form-sign-up" action="">
                 <h1 class="form-title pb-2">Sign Up</h1>
@@ -104,6 +105,7 @@
                     type="radio"
                     id="author"
                     name="role"
+                    data-click="false"
                     class="checkbox"
                     value="author"
                   />
@@ -118,6 +120,24 @@
                   />
                   <label for="reader">Reader</label>
                 </div>
+                <div class="mb-4 signup-data-field">
+                  <input
+                    type="text"
+                    name="dateofbirth"
+                    class="me-3"
+                    placeholder="Date of birth"
+                    onfocus="(this.type='date')"
+                    onblur="(this.type='text')"
+                  />
+                  <input
+                    type="text"
+                    name="dateofdeath"
+                    class="me-3"
+                    placeholder="Date of death"
+                    onfocus="(this.type='date')"
+                    onblur="(this.type='text')"
+                  />
+                </div>
 
                 <button class="mt-5 btn-lg">Next Steep</button>
               </form>
@@ -127,6 +147,12 @@
       </div>
     </div>
     <script>
+      const authorInput = document.querySelector("#author");
+      const dataField = document.querySelector(".signup-data-field");
+      authorInput.addEventListener("click", () => {
+        dataField.classList.toggle("d-flex");
+      });
+
       document.addEventListener("DOMContentLoaded", function (event) {
         document.getElementById("flip-card-btn-turn-to-back").style.visibility =
           "visible";
@@ -164,7 +190,6 @@
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/router.js"></script>
-
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
       window.ga = function () {
